# raytracing

./: .gitignore  CMakeLists.txt  README.md  run.sh  setup-project.sh
src/: color.h  hittable.h  main.cpp  rtweekend.h  sphere.h  vec3.h
